# pico2w_car_os

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  CONTEXT.md  docker-compose.yml
.github/workflows/: main.yml
scripts/: run_tests.sh
src/: CMakeLists.txt  FreeRTOSConfig.h  main.c
src/app/: CMakeLists.txt  app_blink.c  app_blink.h  app_button.c  app_button.h  app_diag.c  app_diag.h  app_display.c  app_display.h  app_fsm.c  app_fsm.h  app_fsm_table.c  app_fsm_table.h  app_monitor.c  app_monitor.h  app_priority_lab.c  app_priority_lab.h  app_sensor.c  app_sensor.h  app_storage.c  app_storage.h  app_sync.c  app_sync.h
src/common/: common_status.h  common_types.h
src/hal/: CMakeLists.txt  hal_delay.c  hal_delay.h  hal_fault.c  hal_fault.h  hal_gpio.c  hal_gpio.h  hal_i2c.c  hal_i2c.h  hal_init.c  hal_init.h  hal_led.c  hal_led.h  hal_wdt.c  hal_wdt.h
test/: CMakeLists.txt  mock_freertos.c  mock_hal_gpio.c  mock_hal_wdt.c  test_app_monitor.c
test/app/: test_app_blink.c  test_app_button.c  test_app_diag.c  test_app_display.c  test_app_fsm.c  test_app_monitor.c  test_app_sensor.c  test_app_storage.c  test_app_sync.c
test/common/: test_common_ringbuffer.c
test/hal/: test_hal_gpio.c  test_hal_i2c.c
test/mock/: FreeRTOS.h  event_groups.h  mock_app_diag.c  mock_freertos.c  mock_hal_delay.c  mock_hal_i2c.c  mock_hal_led.c  mock_hal_multicore.c  mock_hal_storage.c  queue.h  semphr.h  task.h
